# status

./: .gitignore  Cargo.toml  README.md  flake.nix  run  shell.nix  status.sh  todo.org  todo.org_archive
daemon/: main.py  requirements.txt
src/: main.rs  pipes.rs  service.rs  settings.rs  tester.rs
src/pipes/: in_pipe.rs  listen.rs  mod.rs  out_pipe.rs  speaker.rs
src/utils/: jsonc.rs  mod.rs  retry_show.rs  retry_strategy.rs
src/zmq_handler/: listen.rs  mod.rs  speaker.rs
