[package]
name = "status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipipe = "0.11.7"
unix-named-pipe = "0.2.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.105"
process_alive = "0.1.1"
libc = "0.2.147"
nix = "0.27.1"
clap = { version = "4.4.5", features = ["derive"] }