[package]
name = "status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
process_alive = "0.1.1"
libc = "0.2"
clap = { version = "4.4", features = ["derive"] }
online = "4"
zmq = "0.10"